--- a/style.css
+++ b/style.css
@@ -55,18 +55,21 @@ h2{
 
 .category-buttons{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     margin-top: 2em;
+    gap: 30px;
 }
 
 .category-button{
-    padding: 0.2em 0.5em;
+    padding: 0.4em 0.9em;
     font-size: 0.9em;
     border: none;
-    border-radius: 5px;
-    background: white;
-    color: #1a1a1a;
+    border-radius: 30px;
+    background: none;
+    border: 1px solid white;
+    color: white;
     font-weight: bold;
 }
 
@@ -79,12 +82,14 @@ h2{
     background: white;
     color: #1a1a1a;
     font-weight: bold;
+    box-shadow: 0 3px 1px #a7a7a7;
     font-size: 1.4em;
     transition: all 200ms ease-in-out;
 }
 
 #getRandomExcuseBtn:active{
     transform: translateY(5px);
+    box-shadow: 0 0 1px #a7a7a7;
 }
 
 
